--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+  <div id="container">
+    <div id="kairos-logo-wrap" class="img-wrap">
+      <img src="" alt="" srcset="">
+    </div>
+    <div id="history">
+      <p></p>
+    </div>
+    <div id="sponsors-logo-wrap">
+      <div class="img-wrap">
+        <img src="" alt="" srcset="">
+      </div>
+      <div class="img-wrap">
+        <img src="" alt="" srcset="">
+      </div>
+    </div>
+    <div id="pending">
+      <p></p>
+    </div>
+    <div id="contact">
+      <p></p>
+    </div>
+  </div>
 </body>
 </html>
