--- a/index.html
+++ b/index.html
@@ -10,24 +10,46 @@
 <body>
   <div id="container">
     <div id="kairos-logo-wrap" class="img-wrap">
-      <img src="" alt="" srcset="">
+      <img src="./imgs/kairos-logo.jpg" alt="Kairos City Lab logo" srcset="">
     </div>
     <div id="history">
-      <p></p>
+      <p>
+        Since its inception in 2013, the Ezbet Project has had a profound
+        impact on the local community of Ezbet Abu Qarn. With our work
+        there now complete, it's time to shift our focus and expand our
+        reach. Thus, we are transitioning the Ezbet Project into Kairos
+        City Lab.<br>Kairos City Lab, often referred to simply as Kairos
+        Lab, will now serve a broader community base. We remain steadfast
+        in our commitment to training, research, and assisting local
+        communities in need, striving to write a new chapter of our story.
+      </p>
+    </div>
+    <div id="sponsors">
+      <p>Kairos City Lab is proudly sponsored by
+        <a href="http://www.asrt.sci.eg/">The Academy of
+          Scientific Research and Technology</a>.
+        Our offices are situated within the Faculty
+        of Engineering at Ain Shams University.</p>
     </div>
     <div id="sponsors-logo-wrap">
       <div class="img-wrap">
-        <img src="" alt="" srcset="">
+        <img src="./imgs/asrt-logo.png" alt="ASRT logo" srcset="">
       </div>
       <div class="img-wrap">
-        <img src="" alt="" srcset="">
+        <img src="./imgs/ainshams-logo.png" alt="Ain Shams logo" srcset="">
       </div>
     </div>
     <div id="pending">
-      <p></p>
+      <p>Our new website is currently under construction here at
+        www.kairoscitylab.com.
+        <br>Stay Tuned!.</p>
     </div>
     <div id="contact">
-      <p></p>
+      <p>
+        Reach us at: <br>
+        <a href="mailto:ezbet@eng.asu.edu.eg">ezbet@eng.asu.edu.eg</a><br>
+        <a href="mailto:kairos.cl@eng.asu.edu.eg">kairos.cl@eng.asu.edu.eg</a>
+      </p>
     </div>
   </div>
 </body>
