Add styling for big and medium screens

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
   <div id="container">
-    <div id="kairos-logo-wrap" class="img-wrap">
+    <div id="kairos-logo-wrap" class="img-wrap wrap">
       <img src="./imgs/kairos-logo.jpg" alt="Kairos City Lab logo" srcset="">
     </div>
-    <div id="history">
+    <div id="history" class="wrap">
       <p>
-        Since its inception in 2013, the Ezbet Project has had a profound
+        Since its inception in 2013, the <a href="https://www.ezbetproject.com/">
+        EZBET Project</a> has had a profound
         impact on the local community of Ezbet Abu Qarn. With our work
         there now complete, it's time to shift our focus and expand our
         reach. Thus, we are transitioning the Ezbet Project into Kairos
@@ -24,27 +25,31 @@
         communities in need, striving to write a new chapter of our story.
       </p>
     </div>
-    <div id="sponsors">
+    <div id="sponsors" class="wrap">
       <p>Kairos City Lab is proudly sponsored by
         <a href="http://www.asrt.sci.eg/">The Academy of
           Scientific Research and Technology</a>.
         Our offices are situated within the Faculty
         of Engineering at Ain Shams University.</p>
     </div>
-    <div id="sponsors-logo-wrap">
-      <div class="img-wrap">
-        <img src="./imgs/asrt-logo.png" alt="ASRT logo" srcset="">
+    <div id="sponsors-logo-wrap" class="wrap">
+      <div class="img-wrap asrt-logo-wrap">
+        <a href="http://www.asrt.sci.eg/">
+          <img src="./imgs/asrt-logo-filled-cropped.jpg" alt="ASRT logo" srcset="">
+        </a>
       </div>
-      <div class="img-wrap">
-        <img src="./imgs/ainshams-logo.png" alt="Ain Shams logo" srcset="">
+      <div class="img-wrap ainshams-logo-wrap">
+        <a href="https://eng.asu.edu.eg/">
+          <img src="./imgs/ainshams-logo.png" alt="Ain Shams logo" srcset="">
+        </a>
       </div>
     </div>
-    <div id="pending">
+    <div id="pending" class="wrap">
       <p>Our new website is currently under construction here at
         www.kairoscitylab.com.
-        <br>Stay Tuned!.</p>
+        <br><br>Stay Tuned!</p>
     </div>
-    <div id="contact">
+    <div id="contact" class="wrap">
       <p>
         Reach us at: <br>
         <a href="mailto:ezbet@eng.asu.edu.eg">ezbet@eng.asu.edu.eg</a><br>
